--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "2.0.22",
-    "apexcharts": "^3.35.5",
-    "clsx": "^2.0.0",
-    "framer-motion": "^10.16.0",
-    "next": "^14.0.4",
-    "next-themes": "0.2.1",
-    "react": "18.2.0",
-    "react-apexcharts": "^1.4.0",
-    "react-dom": "18.2.0"
+    "@nextui-org/react": "2.3.6",
+    "apexcharts": "^3.49.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.9",
+    "next": "^14.2.3",
+    "next-themes": "0.3.0",
+    "react": "18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.15",
+    "@iconify/react": "^4.1.1",
+    "@types/node": "20.12.11",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.23.1",
-    "eslint-config-next": "13.4.16",
-    "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3",
-    "typescript": "4.8.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.4.5"
   }
 }
